Wed Apr 23 21:05:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CXX/ParserHeader.cpp:
        * CXX/ParserSource.cpp:
        * CXX/WriterHeader.cpp:
        * CXX/WriterSource.cpp:
        
          The top-level reader and writer methods are now defined in a
          reader/writer namespace to prevent ambiguity when using either
          function as a pointer-to-function.

        * XSCRT/XSCRT/utils/File_T.h:
        * XSCRT/XSCRT/utils/File_T.cpp:
        
          . The parser is released whenever the reader class is 
            destroyed.

          . Removed the 'const' quantifier from the writer () method.
          
Wed Apr 23 18:13:39 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CXX/Elements.hpp:
        * CXX/Header.cpp:
        * CXX/Inline.cpp:
        * CXX/Source.cpp:
        * IDL/Elements.hpp:
        * XSC/Parser.cpp:
        * XSC/Parser.hpp:

          . Bug fix where writers for anonymous types where not generated
            correctly. The bug was resolved by naming the anonymous type
            at parsing time, which allowed the backend generator's to
            handle it as if it was a named type.

          . Anonymous types have to suffix 'Type'.

Tue Apr 22 00:01:05 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xscrt_idl.mpb:

          Base project for using the IDL XSC runtime.

Thu Apr 17 23:18:03 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * IDL/Generator.cpp:

          . Bug fix where --idl-namespace-regex was specified as
            --cxx-namespace-regex.
          . Bug fix where not using the --idl-namespace-regex
            parameter caused the program to terminate abnormally.

        * MPC/config/xsc_base.mpb:
        * XSC.mpc:

          Changed generated binary file from `xsc-binary' to `xsc'.

Tue Apr 15 21:54:21 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSCRT/XSCRT/XSCRT.mpc:
